--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -32,11 +32,11 @@ section {
 @include media-breakpoint-down(sm) {
 	section {
 		h1 {
-			font-size: 3.75rem;
+			font-size: 3.25rem;
 		}
 
 		h2 {
-			font-size: 2.5rem;
+			font-size: 2.25rem;
 		}
 	}
 }
